css/style.css
 html, body{
   overflow-x: hidden;
 }
 body {
   font-family: "Arapey", serif;
   font-weight: 400;
   color:#333333;
 }
 h1 {
   font-family: "Arapey", serif;
   font-weight: 400;
   font-size: 36pt;
   color: #FFD459;
 }
 h2 {
   font-family: 'Montserrat', Helvetica, Arial, sans-serif;
   font-weight: 400;
   font-size:14px;
   color: #ffffff;
 }
 p {
   font-family: "Arapey", serif;
   font-weight: 400;
   font-size:16px;
   line-height: 19px;
 }
  /* GRID */
 .container {
   margin-right: auto;
   margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
   position: relative;
 }
 .container:before,
 .container:after {
   content: " ";
   display: table;
 }
 .container:after {
   clear: both;
 }
 .contained {
   width:96%;
   /*float:left;*/
   position:relative;
   min-height: 1px;
   margin:0 2% 20px;
 }
 .contained > ul > li {
   display: none;
 }
/* Homepage Media Queries for Tablet, Desktop*/
  @media (min-width: 768px) {
   .container {
     width: 750px;
   }
 }
  @media (min-width: 992px) {
   .container {
     width: 970px;
   }
/*   .contained {
     width:29.33333%;*/
   }
 }
 @media (min-width: 1200px) {
   .container {
     width: 1170px;
   }
 }
/* Homepage Hero Section*/
header {
   color: #FFD459;
   background-color: #78b7da;
}
header nav {
   z-index: 10;
   color: #FFD459;
   position: absolute;
}
nav.full-width {
   width: 100%;
}
.site-logo {
   float: left;
}
.navigation-items > ul {
   list-style: none;
/*   width: 100%;*/
   display: none;
}
.navigation-itmes > ul > li {
   width: 100%;
}
.navigation-items > ul > li > a {
   text-decoration: none;
   font-family: 'Montserrat', Helvetica, Arial, sans-serif;
   font-weight: 400;
   font-size: 12px;
   color: #B2902C;
   text-shadow: 0 1px #FFD459;
}
@media (min-width: 992px) {
   .site-logo {
      width: 46%;
   }
   .navigation-items {
      width: 46%;
      float: right;
      display: inline;
   }
   .navigation-items ul {
      display: block;
      text-align: right;
      float: right;
      margin: 0;
   }
   .navigation-items ul > li {
      display: inline-block;
      margin: 10px 0 0 10px;
   }
   .navigation-items ul > li > a:hover {
      color: #FFD459;
      text-shadow: 0 1px #B2902C;
   }
   .navigation-items a.btn {
/*      margin: 5px 0;*/
      padding: 5px;
      text-shadow: none;
   }
   .navigation-items a.btn:hover {
      padding: 5px;
      background-color: #B2902C;
      border-bottom: 3px solid #B2902C;
      color: #FFD459;
   }
/*   .navigation-items li.btn :hover {
      color: #FFD459;
   }*/
   a.hamburger-icon, i.fa-bars {
      display: none;
   }
   .hero .healine a.btn {
      display: none;
   }
}
img.logo-png {
   height: 75px;
}
nav > .contained > .container > a.hamburger-icon, i.fa-bars {
   float: right;
   color: #B2902C;
   margin: 20px 0 0 0;
   padding: 5px;
   background-color: #FFD459;
}
nav > .contained > .container > a.hamburger-icon, i.fa-bars:hover {
   color: #FFD459;
   background-color: #B2902C;
}
.hero {
   background: #78b7da url("../images/hero_img.jpg") no-repeat;
   background-position: center center;
   background-size: cover;
   display: block;
   width: 100%;
   height: 80vh;
}
section.hero::before{
  position: absolute;
  content:" ";
  top:0;
  left:0;
  width:100%;
  height:100%;
  display: block;
  z-index:0;
  background-color: rgba(120, 183, 218, 0.5);
 } 
/*@media (max-width: 518px) {
   header .hero {
      background-size: 300%;
      background-position: center -150px;
   }
}*/
.container /*> .headline */{
   margin: 0 auto;
}
h1 {
   /*float: left;*/
   margin: 0 auto;
   padding: 75px 0 0 0;
   text-align: center;
   text-shadow: 1px 2px #B2902C;
   position: relative;
}
h2 {
   /*float: left;*/
   /*margin: 0 auto;*/
   text-align: center;
   position: relative;
   text-shadow: 1px 2px #B2902C;
}
.btn {
   padding: 10px;
   background-color: #FFD459;
   border-bottom: 3px solid #B2902C;
}
.btn:hover {
   padding: 10px;
   background-color: #B2902C;
   border-bottom: 3px solid #B2902C;
}
.hero a.btn {
   font-family: 'Montserrat', Helvetica, Arial, sans-serif;
   font-weight: 400;
   font-size:12px; 
   color: #B2902C;
   text-decoration: none;
   text-align: center;
   margin: 0 auto;
   position: relative;
}
.hero a.btn:hover {
   color: #FFD459;
}
/*Footer*/
footer {
   width: 100%;
}
footer > .ruled-line {
   height: 15px;
   width: 100%;
   background: #FFD459;
}
.footer-text-block {
   background-color: #ffffff;
   padding: 15px 0 0 0;
}
.footer-text-block > .contained {
   width: 1000%;
   float: right;
   text-align: right;
   color: #B2902C;
   height: 15vh;
}
.footer-text-block > .contained > p {
   font-family: 'Montserrat', Helvetica, Arial, sans-serif;
   font-weight: 400;
   font-size:12px;
   line-height: 14px;
   margin: 0;
   padding: 0 0 5px 0; /*bottom padding*/
}
a.email-address, a.insta-handle {
   color: #B2902C;
   text-decoration: none;
}

